test: instructions schema